--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.16.2",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "element-ui": "^2.2.1",
     "express": "^4.15.5",
     "mongoose": "^4.11.13",
     "multer": "^1.3.0",
