--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "vue-style-loader": "^4.1.0"
   }
 }
