--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "element-ui": "^2.2.1",
     "express": "^4.15.5",
+    "express-session": "^1.15.6",
+    "gt3-sdk": "^2.0.0",
     "js-cookie": "^2.2.0",
     "mongoose": "^4.11.13",
     "multer": "^1.3.0",
